--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.4.0",
     "class-variance-authority": "^0.7.0",
-    "mongoose": "^8.2.1",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.2.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
